最初のコミット

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8" />
-    <title>XXX's Curry Recipe</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, user-scalable=yes"
-    />
-  </head>
-
+  <<head>
+  <meta charset="utf-8" />
+  <title>XXX's Curry Recipe</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" />
+  <link rel="stylesheet" href="main.css" />
+</head>
   <body> <!-- ここから本文開始 -->
 
     <h1>XXX's Curry Recipe</h1>
