3回目のコミット

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
 
         <header>
-            <h1>大阪公立大学工業高等専門学校2年知能情報コースの学生(16歳)</h1>
+            <h1>大阪公立大学工業高等専門学校2年<p></p>知能情報コースの学生(16歳)</h1>
         </header>
 
         <main>
@@ -72,9 +72,14 @@
                     </article>
 
                     <article class="project-card">
-                        <h3>[作品名2]</h3>
-                        <p>[作品の説明]</p>
-                        <a href="[作品のURLやGitHubリポジトリ]" class="project-link" target="_blank" rel="noopener noreferrer">リンクを見る</a>
+                        <h3>「Minecraft✖高専」</h3>
+                        <p>Minecraft内で高専を再現し、先生を倒すことで単位を集め、進級を目指すRPG</p>
+                        <div class="project-images">
+                        <img src="kosen_mod_1.png" alt="作成したMODの画像1">
+                        <img src="kosen_mod_2.png" alt="作成したMODの画像2">
+                        </div>
+                        <p>ダウンロードリンク※これだけでは遊ぶことはできません</p>
+                        <a href="mods/kosen_story_mod.zip" class="project-link" download>リンクを見る</a>
                     </article>
                     
                     </div>
@@ -83,7 +88,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 [あなたの名前]. All Rights Reserved.</p>
+            <p>&copy; 2025 [yusuke090206]. All Rights Reserved.</p>
         </footer>
 
     </div> </body>
