4回目のコミット

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
 
         <header>
-            <h1>大阪公立大学工業高等専門学校2年<p></p>知能情報コースの学生(16歳)</h1>
+            <h1>大阪公立大学工業高等専門学校2年<br>知能情報コースの学生(16歳)</h1>
         </header>
 
         <main>
