5回目のコミット

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <img src="kosen_mod_2.png" alt="作成したMODの画像2">
                         </div>
                         <p>ダウンロードリンク※これだけでは遊ぶことはできません</p>
-                        <a href="mods/kosen_story_mod.zip" class="project-link" download>リンクを見る</a>
+                        <a href="kosen_story_mod.zip" class="project-link" download>リンクを見る</a>
                     </article>
                     
                     </div>
