自己紹介セクションの改行を追加し、スキルリストにIntelliJ IDEAを追加。作品カードのダウンロードリンクのテキストを変更し、CSSのコメントを整理。

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             
             <section id="about">
                 <h2>自己紹介</h2>
-                <p>大阪公立大学工業高等専門学校在学の知能情報コースの学生です。プログラミングについて学んでいます。</p>
+                <p>大阪公立大学工業高等専門学校在学の知能情報コースの学生です。<br>プログラミングについて学んでいます。</p>
             </section>
 
             <section id="skills">
@@ -44,6 +44,7 @@
                     <li>MakeCode for micro:bit</li>
                     <li>Tinkercad</li>
                     <li>WSL (Windows Subsystem for Linux)</li>
+                    <li>IntelliJ IDEA</li>
                 </ul>
 
                 <h3>初歩的な知識を持っている言語</h3>
@@ -78,8 +79,8 @@
                         <img src="kosen_mod_1.png" alt="作成したMODの画像1">
                         <img src="kosen_mod_2.png" alt="作成したMODの画像2">
                         </div>
-                        <p>ダウンロードリンク※これだけでは遊ぶことはできません</p>
-                        <a href="kosen_story_mod.zip" class="project-link" download>リンクを見る</a>
+                        <p>ダウンロードリンク<br>※これだけでは遊ぶことはできません</p>
+                        <a href="kosen_story_mod.zip" class="project-link" download>ダウンロード</a>
                     </article>
                     
                     </div>
