--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My Portfolio</title>
     
     <link rel="stylesheet" href="main.css">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
     </head>
 <body>
 
@@ -91,6 +93,7 @@
         <footer>
             <p>&copy; 2025 [yusuke090206]. All Rights Reserved.</p>
         </footer>
-
+        </div> <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
     </div> </body>
 </html>
