作品カードの構造を改善し、MODのダウンロードリンクを記事要素でラップ

--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
         
                         <img src="kosen_mod_2.png" alt="作成したMODの画像2">
                         </a>
-                        <a href="kosen_story_mod.zip" class="project-link" download>
+                        <article class="project-card">
+    <a href="kosen_story_mod.zip" class="project-link" download>
         MODをダウンロード (.zip)
     </a>
-                        </div>
+</article>
                     
                     </div>
             </section>
