「Minecraft✖高専」プロジェクトカードにマップ移動用の教科書とゲーム開始スイッチの作成についての説明を追加

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <article class="project-card">
             <h3>「Minecraft✖高専」</h3>
             <p>Minecraft内で高専を再現し、先生を倒すことで単位を集め、進級を目指すRPG</p>
+            <p>今回私はマップ移動をするための教科書とゲームを開始するためのスイッチを作成しました。また、マップをより新しいものに改修する作業も行いました。</p>
             
             <div class="project-images">
                 <a href="kosen_mod_1.png" data-lightbox="minecraft-mod" data-title="作成したMODの画像1">
