Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
             <a href="kosen_story_mod.zip" class="project-link" download>
                 MODをダウンロード (.zip)
             </a>
+            <a href="kosen_mod_3.png" 
+    data-lightbox="minecraft-mod" 
+    data-title="改修した高専の画像">
+        
+        <img src="kosen_mod_3.png" alt="改修した高専の画像">
+    </a>
         </article>
         
         </div> </section>
