「Minecraft✖高専」プロジェクトの説明を更新し、マップ改修やゲームスタートボタン、ワープ用教科書の作成について追記

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     <article class="project-card">
                         <h3>「Minecraft✖高専」</h3>
-                        <p>Minecraft内で高専を再現し、先生を倒すことで単位を集め、進級を目指すRPG</p>
+                        <p>Minecraft内で高専を再現し、先生を倒すことで単位を集め、進級を目指すRPG<br>今回私はマップの改修とゲームスタートさせるためのボタン、ワープするための教科書うを作成しました。</p>
                         
                         <div class="project-images">
                             <a href="kosen_mod_1.png" data-lightbox="minecraft-mod" data-title="作成したMODの画像1">
