--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
     <meta name="description" content="大阪公立大学高専 学生のポートフォリオサイトです。">
     <title>My Portfolio</title>
     
